<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearHostTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvColon"
        app:layout_constraintEnd_toStartOf="@+id/tvColon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvColon">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHostTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            tools:text="NASK" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHostGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHostGoals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/goals"
                android:inputType="number"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvColon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/colon"
        android:textSize="@dimen/text_size_extra_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearGuestTeam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tvColon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvColon"
        app:layout_constraintTop_toTopOf="@+id/tvColon">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGuestTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/text_size_medium"
            tools:text="NASK" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGuestGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGuestGoals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/goals"
                android:inputType="number"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdateGame"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateGame" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateGame"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/update_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearGuestTeam" />


</androidx.constraintlayout.widget.ConstraintLayout>